# simplejs_sdl_plugin

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  apiTest.js  configure.cmd  configure.sh
sdl3_plugin/: CMakeLists.txt  main.c  sdl3-proxy.c  utils.c
sdl3_plugin/inc/: default.h  sdl3-proxy.h
